--- a/assets/css/content/_post-list.scss
+++ b/assets/css/content/_post-list.scss
@@ -33,7 +33,7 @@
 }
 
 .post-list-date {
-  display: flex;
+  display: inline-block;
   font-size: 80%;
   color: var(--grey-dark);
 
